[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
argh = { version = "0.1.14", default-features = false, features = ["help"] }
axum = { version = "0.8.8", default-features = false }
bytes = { version = "1.11.1", default-features = false }
ciborium = { version = "0.2.2", default-features = false }
ciborium-io = { version = "0.2.2", default-features = false }
color-eyre = { version = "0.6.5", default-features = false }
eyre = { version = "0.6.12", default-features = false }
float_eq = { version = "1.0.1", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
geo-types = { version = "0.7.18", default-features = false }
humantime = { version = "2.3.0", default-features = false }
hyper = { version = "1.8.1", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.149", default-features = false }
sled = { version = "0.34.7" }
thiserror = { version = "2.0.18", default-features = false }
time = { version = "0.3.47", default-features = false }
tokio = { version = "1.49.0", default-features = false }
tokio-util = { version = "0.7.18", default-features = false }
tower-http = { version = "0.6.8", default-features = false }
tracing = { version = "0.1.44", default-features = false }
tracing-error = { version = "0.2.1", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false }
uom = { version = "0.37.0", default-features = false }
uuid = { version = "1.20.0", default-features = false }

# Optimize the backtrace crate specifically even for debug builds.
[profile.dev.package.backtrace]
opt-level = 3
