[package]
name = "server"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
shared = { path = "../shared" }
argh = "0.1.5"
color-eyre = "0.5.11"
eyre = "0.6.5"
serde = "1.0.126"
serde_json = "1.0.66"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
warp = "0.3.1"
