[package]
name = "shared"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
geo-types = { version = "0.7.2", default-features = false, features = ["serde"] }
num-traits = "0.2.14"
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
time = { version = "0.2.27", default-features = false, features = ["serde"] }
uuid = { version = "0.8.2", default-features = false, features = ["serde", "v4"] }
