[package]
name = "shared"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
geo-types = { version = "0.7.2", default-features = false, features = ["serde"] }
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
time = { version = "0.2.27", default-features = false, features = ["serde"] }
uom = { version = "0.31.1", default-features = false, features = ["f64", "si", "serde"] }
uuid = { version = "0.8.2", default-features = false, features = ["serde", "v4"] }

[dev-dependencies]
float_eq = "0.6.0"
serde_json = "1.0.64"
