[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
argh = { version = "0.1.7", optional = true }
async-trait = "0.1.53"
axum = "0.5.0"
bytes = "1.1.0"
ciborium = "0.2.0"
ciborium-io = "0.2.0"
color-eyre = { version = "0.6.1", optional = true }
eyre = { version = "0.6.7", optional = true }
futures-util = { version = "0.3.21", default-features = false }
humantime = { version = "2.1.0", optional = true }
hyper = "0.14.18"
serde = "1.0.136"
serde_json = "1.0.79"
shared = { path = "../shared" }
sled = { version = "0.34.7", optional = true }
thiserror = "1.0.30"
time = { version = "0.3.9", default-features = false }
tokio = { version = "1.17.0", features = ["io-util", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
tower-http = { version = "0.2.5", features = ["trace"] }
tracing = "0.1.32"
tracing-error = { version = "0.2.0", optional = true }
tracing-subscriber = { version = "0.3.10", optional = true, features = ["env-filter", "time"] }

[lib]
name = "server"

[features]
bin = ["argh", "color-eyre", "eyre", "humantime", "tracing-error", "tracing-subscriber"]

[[bin]]
name = "server"
required-features = ["bin"]
