[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
argh = { workspace = true, optional = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["http1", "json", "query"] }
bytes = { workspace = true }
ciborium = { workspace = true, features = ["std"] }
ciborium-io = { workspace = true }
color-eyre = { workspace = true, optional = true }
eyre = { workspace = true, optional = true }
futures-util = { workspace = true, default-features = false }
humantime = { workspace = true, optional = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared" }
sled = { workspace = true, optional = true }
thiserror = { workspace = true }
time = { workspace = true, default-features = false }
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["codec"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true, features = ["attributes", "std"] }
tracing-error = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter", "time"] }

[lib]
name = "server"

[features]
bin = ["argh", "color-eyre", "eyre", "humantime", "tracing-error", "tracing-subscriber"]

[[bin]]
name = "server"
required-features = ["bin"]
