[package]
name = "shared"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
geo-types = { version = "0.7.2", default-features = false, features = ["serde"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
time = { version = "0.3.4", default-features = false, features = ["serde"] }
uom = { version = "0.31.1", default-features = false, features = ["f64", "serde", "si"] }
uuid = { version = "0.8.2", default-features = false, features = ["serde"] }

[dev-dependencies]
float_eq = "0.7.0"
serde_cbor = "0.11.2"
serde_json = "1.0.68"
time = { version = "0.3.4", features = ["macros"] }
