[package]
name = "shared"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
geo-types = { version = "0.7.3", default-features = false, features = ["serde"] }
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
time = { version = "0.3.9", default-features = false, features = ["serde"] }
uom = { version = "0.32.0", default-features = false, features = ["f64", "serde", "si"] }
uuid = { version = "0.8.2", default-features = false, features = ["serde"] }

[dev-dependencies]
ciborium = "0.2.0"
float_eq = "0.7.0"
serde_json = "1.0.79"
time = { version = "0.3.9", features = ["macros"] }
