[package]
name = "shared"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
geo-types = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["serde"] }
uom = { workspace = true, features = ["f64", "serde", "si"] }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
ciborium = { workspace = true }
float_eq = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
time = { workspace = true, features = ["macros"] }
